<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">worker</string>
    <string name="hint_name">new name</string>
    <string name="hint_address">address</string>
    <string name="hint_age">age</string>
    <string name="hint_wage">wage</string>
    <string name="hint_old_name">old name</string>
    <string name="confirm">confirm</string>
    <string name="add">add</string>
    <string name="delete">delete</string>
    <string name="query">query</string>
    <string name="update">update</string>
    <string name="not_known">result is null</string>
    <string name="success">operate success</string>
    <string name="failed">operate failed</string>

    <string name="income">income</string>
    <string name="expand">expand</string>
    <string name="direct_title">income or expand</string>
    <string name="hint_price">price</string>
    <string name="hint_goods">goods</string>
    <string name="hint_describe">say somethings</string>
    <string name="jump_note">jump_to_note</string>

    <string name="info">"info:<xliff:g id="ap_name">%1$s</xliff:g>"</string>
</resources>
